# delphyne

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  CPPLINT.cfg  Jenkinsfile  LICENSE  README.md  WORKSPACE  colcon.pkg  delphyne.repos  package.xml  prereqs  pylintrc  setup.bash  setup.bash.in  setup.sh.in
backend/: BUILD  CMakeLists.txt  LCM_IGN_TRANSLATION.md  SimulationRunner.cc  SimulationRunner.h  SimulationRunner.hh  SimulationRunner_TEST.cc  abstract_input_to_ign_converter.h  abstract_value_to_ignition_message_converter.h  agent_plugin_base.h  agent_plugin_loader.cc  agent_plugin_loader.h  automotive_demo.cc  automotive_simulator.cc  automotive_simulator.h  delphyne_realtime_clock.h  delphyne_utils.py  demo_launcher.py  discrete_value_to_ignition_message_converter.h  drake_driving_command_to_ign_driving_command_translator_system.cc  drake_driving_command_to_ign_driving_command_translator_system.h  drake_simple_car_state_to_ign_simple_car_state_translator_system.cc  drake_simple_car_state_to_ign_simple_car_state_translator_system.h  drake_to_ign_translator_system.h  driving_command_to_ignition_message_converter.cc  driving_command_to_ignition_message_converter.h  ign_driving_command_to_drake_driving_command_translator_system.cc  ign_driving_command_to_drake_driving_command_translator_system.h  ign_driving_command_to_lcm_driving_command_translator_system.cc  ign_driving_command_to_lcm_driving_command_translator_system.h  ign_model_v_to_lcm_viewer_draw_translator_system.cc  ign_model_v_to_lcm_viewer_draw_translator_system.h  ign_publisher_system.cc  ign_publisher_system.h  ign_simple_car_state_to_drake_simple_car_state_translator_system.cc  ign_simple_car_state_to_drake_simple_car_state_translator_system.h  ign_simple_car_state_to_lcm_simple_car_state_translator_system.cc  ign_simple_car_state_to_lcm_simple_car_state_translator_system.h  ign_subscriber_system.h  ign_to_drake_translator_system.h  (+44 more)
backend/pkgconfig/: libdrake.pc
backend/python/: delphyne.py  demo_launcher.py  simulation_utils.py
backend/python_examples/: README.md  keyboard_controlled_simulation.py  paused_mode_example.py  python_bindings_example.py  realtime_rate_changer.py  road_loading_example.py  roads.py  time_bounded_simulation.py
backend/test/: abstract_input_to_ign_converter_test.cc  abstract_value_to_ignition_message_converter_test.cc  agent_plugin_loader_test.cc  automotive_simulator_test.cc  discrete_value_to_ignition_message_converter_test.cc  drake_driving_command_to_ign_driving_command_translator_system_test.cc  drake_driving_command_to_ign_translator_system_test.cc  drake_simple_car_state_to_ign_simple_car_state_translator_system_test.cc  drake_simple_car_state_to_ign_translator_system_test.cc  driving_command_to_ignition_message_converter_test.cc  helpers.cc  helpers.h  ign_driving_command_to_drake_driving_command_translator_system_test.cc  ign_driving_command_to_drake_translator_system_test.cc  ign_driving_command_to_lcm_driving_command_translator_system_test.cc  ign_model_v_to_lcm_viewer_draw_translator_system_test.cc  ign_publisher_system_test.cc  ign_simple_car_state_to_drake_simple_car_state_translator_system_test.cc  ign_simple_car_state_to_drake_translator_system_test.cc  ign_simple_car_state_to_lcm_simple_car_state_translator_system_test.cc  ign_subscriber_system_test.cc  ign_to_lcm_translation_test.cc  interactive_simulation_stats_test.cc  lcm_driving_command_to_ign_driving_command_translator_system_test.cc  lcm_simple_car_state_to_ign_simple_car_state_translator_system_test.cc  lcm_to_ign_translation_test.cc  lcm_viewer_draw_to_ign_model_v_translator_system_test.cc  lcm_viewer_draw_to_ignition_message_converter_test.cc  lcm_viewer_load_robot_to_ign_model_v_translator_system_test.cc  linb_any_test.cc  load_robot_aggregator_test.cc  scene_system_test.cc  simple_car_state_input_to_ign_converter_test.cc  simple_car_state_to_ignition_message_converter_test.cc  simulation_run_stats_test.cc  simulation_runner_py_test.py  simulation_runner_test.cc  time_conversion_test.cc  vector_input_to_ign_converter_test.cc
backend/translation_systems/: CMakeLists.txt  drake_driving_command_to_ign.cc  drake_driving_command_to_ign.h  drake_driving_command_to_ign_driving_command.cc  drake_driving_command_to_ign_driving_command.h  drake_simple_car_state_to_ign.cc  drake_simple_car_state_to_ign.h  drake_simple_car_state_to_ign_simple_car_state.cc  drake_simple_car_state_to_ign_simple_car_state.h  drake_to_ign.h  ign_driving_command_to_drake.cc  ign_driving_command_to_drake.h  ign_driving_command_to_drake_driving_command.cc  ign_driving_command_to_drake_driving_command.h  ign_model_v_to_lcm_viewer_draw.cc  ign_model_v_to_lcm_viewer_draw.h  ign_simple_car_state_to_drake.cc  ign_simple_car_state_to_drake.h  ign_to_drake.h  (+6 more)
bridge/: BUILD  CMakeLists.txt  README.md  demo_launcher.py  duplex_ign_lcm_bridge.cc  ign_service_converter.h  ign_service_converter_TEST.cc  ign_to_lcm_translation.cc  ign_to_lcm_translation.h  ign_to_lcm_translation_TEST.cc  ign_topic_repeater.h  ign_topic_repeater.hh  launcher.py  lcm_channel_repeater.h  lcm_channel_repeater_TEST.cc  lcm_ign_transport_bridge.cc  lcm_mock_robot_publisher.cc  lcm_to_ign_translation.cc  lcm_to_ign_translation.h  lcm_to_ign_translation.hh  lcm_to_ign_translation_TEST.cc  mocked_robot_demo.py  repeater_factory.cc  repeater_factory.h  repeater_factory_TEST.cc  repeater_manager.cc  repeater_manager.h  repeater_manager.hh  repeater_manager_TEST.cc  service_to_channel_translation.cc  service_to_channel_translation.h  service_to_channel_translation_TEST.cc  translate_exception.h
cmake/: Python.cmake  (+7 more)
loadable_agents/: CMakeLists.txt  LoadableMaliputRailCar.cc  LoadableMobilControlledSimpleCar.cc  LoadablePriusSimpleCar.cc  LoadablePriusTrajectoryCar.cc  maliput_rail_car.cc  prius_simple_car.cc
protobuf/: CMakeLists.txt  scene_request.proto  simple_car_state.proto  simulation_in_message.proto  viewer2_comms.proto  viewer_command.proto
python/: CMakeLists.txt  setup.py.in
src/: CMakeLists.txt
test/: CMakeLists.txt  Readme.md  run_tests.sh  test_config.h.in
(+505 files in other folders)
