<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>delphyne</name>
  <version>1.0.0</version>
  <description>Delphyne</description>
  <maintainer email="daniel.stonier@tri.global">Daniel Stonier</maintainer>
  <license file="LICENSE">BSD 3-Clause</license>

  <build_depend>libavdevice-dev</build_depend>
  <build_depend>libboost-filesystem-dev</build_depend>
  <build_depend>libzip-dev</build_depend>
  <build_depend>mesa-utils</build_depend>
  <build_depend>python-pylint3</build_depend>
  <build_depend>python-pycodestyle</build_depend>
  <build_depend>python3-pycodestyle</build_depend>
  <build_depend>ruby-ronn</build_depend>
  <build_depend>zip</build_depend>

  <build_depend>cmake</build_depend>
  <build_depend>coreutils</build_depend>
  <build_depend>gcovr</build_depend>
  <build_depend>lcov</build_depend>
  <build_depend>freeimage</build_depend>
  <build_depend>libglew-dev</build_depend>
  <build_depend>libgts</build_depend>
  <build_depend>libicu-dev</build_depend>
  <build_depend>libsqlite3-dev</build_depend>
  <build_depend>protobuf-dev</build_depend>
  <build_depend>tinyxml2</build_depend>
  <build_depend>libzmq3-dev</build_depend>
  <build_depend>pkg-config</build_depend>
  <build_depend>python3-setuptools</build_depend>
  <build_depend>uuid</build_depend>
  <build_depend>unzip</build_depend>

  <build_depend>drake_vendor</build_depend>
  <build_depend>ignition-common3</build_depend>
  <build_depend>ignition-math6</build_depend>
  <build_depend>ignition-msgs4</build_depend>
  <build_depend>ignition-transport7</build_depend>
  <build_depend>malidrive</build_depend>
  <build_depend>maliput_malidrive</build_depend>

  <depend>maliput</depend>
  <depend>maliput_dragway</depend>
  <depend>maliput_multilane</depend>

  <build_export_depend>drake_vendor</build_export_depend>
  <build_export_depend>ignition-common3</build_export_depend>
  <build_export_depend>ignition-math6</build_export_depend>
  <build_export_depend>ignition-msgs4</build_export_depend>
  <build_export_depend>ignition-transport7</build_export_depend>
  <build_export_depend>malidrive</build_export_depend>
  <build_export_depend>maliput_malidrive</build_export_depend>

  <exec_depend>ament_cmake</exec_depend>
  <exec_depend>py_trees</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
