<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>delphyne</name>
  <version>1.0.0</version>
  <description>Delphyne</description>
  <maintainer email="daniel.stonier@tri.global">Daniel Stonier</maintainer>
  <license file="LICENSE">BSD 3-Clause</license>

  <build_depend>libzip-dev</build_depend>
  <build_depend>protobuf-dev</build_depend>
  <build_depend>unzip</build_depend>
  <build_depend>zip</build_depend>

  <build_depend>ament_cmake_doxygen</build_depend>
  <build_depend>drake_vendor</build_depend>
  <build_depend>ignition-common4</build_depend>
  <build_depend>ignition-math6</build_depend>
  <build_depend>ignition-msgs7</build_depend>
  <build_depend>ignition-transport10</build_depend>
  <build_depend>maliput_malidrive</build_depend>

  <depend>maliput</depend>
  <depend>maliput_dragway</depend>
  <depend>maliput_multilane</depend>
  <depend>maliput_py</depend>

  <build_export_depend>drake_vendor</build_export_depend>
  <build_export_depend>ignition-common4</build_export_depend>
  <build_export_depend>ignition-math6</build_export_depend>
  <build_export_depend>ignition-msgs7</build_export_depend>
  <build_export_depend>ignition-transport10</build_export_depend>
  <build_export_depend>maliput_malidrive</build_export_depend>

  <exec_depend>ament_cmake</exec_depend>
  <exec_depend>py_trees</exec_depend>

  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_flake8</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
